# meshy-bottube-mcp

./: .env.example  .gitignore  BCOS.md  README.md  llms.txt  pyproject.toml  requirements.txt
meshy_bottube/: __init__.py  bottube.py  meshy.py  server.py  turntable.py  video.py
tests/: test_offline.py
